test/cases/parser/Datatypes4.errors
src/Datatypes4.b:7:25: Syntax error (expected term)
